@@ -7,7 +7,13 @@ import java.nio.file.Files;
 import java.nio.file.Path;
 import java.time.LocalDateTime;
 import java.time.temporal.ChronoUnit;
+import java.util.Collection;
+import java.util.LinkedHashMap;
+import java.util.LinkedHashSet;
 import java.util.List;
+import java.util.Map;
+import java.util.Set;
+import java.util.TreeMap;
 import java.util.regex.Pattern;
 import java.util.stream.Collectors;
 
@@ -20,21 +26,29 @@ import org.jabref.logic.exporter.BibWriter;
 import org.jabref.logic.exporter.SaveException;
 import org.jabref.logic.exporter.SelfContainedSaveConfiguration;
 import org.jabref.logic.git.SlrGitHandler;
+import org.jabref.logic.groups.GroupsFactory;
 import org.jabref.logic.importer.OpenDatabase;
 import org.jabref.logic.importer.SearchBasedFetcher;
 import org.jabref.logic.l10n.Localization;
 import org.jabref.logic.os.OS;
 import org.jabref.logic.preferences.CliPreferences;
 import org.jabref.logic.util.io.FileNameCleaner;
+import org.jabref.logic.util.strings.StringUtil;
 import org.jabref.model.database.BibDatabase;
 import org.jabref.model.database.BibDatabaseContext;
+import org.jabref.model.entry.BibEntry;
 import org.jabref.model.entry.BibEntryTypesManager;
+import org.jabref.model.entry.KeywordList;
+import org.jabref.model.entry.field.StandardField;
+import org.jabref.model.groups.ExplicitGroup;
+import org.jabref.model.groups.GroupHierarchyType;
+import org.jabref.model.groups.GroupTreeNode;
 import org.jabref.model.metadata.SaveOrder;
 import org.jabref.model.metadata.SelfContainedSaveOrder;
 import org.jabref.model.study.FetchResult;
 import org.jabref.model.study.QueryResult;
 import org.jabref.model.study.Study;
-import org.jabref.model.study.StudyDatabase;
+import org.jabref.model.study.StudyCatalog;
 import org.jabref.model.study.StudyQuery;
 import org.jabref.model.util.FileUpdateMonitor;
 
@@ -50,6 +64,8 @@ import org.slf4j.LoggerFactory;
 public class StudyRepository {
     // Tests work with study.yml
     public static final String STUDY_DEFINITION_FILE_NAME = "study.yml";
+    public static final int DEFAULT_RESULT_LIMIT = 100;
+    public static final String STUDY_LOCK_FILE_NAME = "study-lock.yml";
 
     private static final Logger LOGGER = LoggerFactory.getLogger(StudyRepository.class);
 
@@ -174,15 +190,41 @@ public class StudyRepository {
                     .collect(Collectors.toList());
     }
 
+    /// Returns all query definitions of the study, preserving catalog-specific overrides.
+    public List<StudyQuery> getStudyQueries() {
+        return study.getQueries();
+    }
+
     /// Extracts all active fetchers from the library entries.
     ///
     /// @return List of BibEntries of type Library
     /// @throws IllegalArgumentException If a transformation from Library entry to LibraryDefinition fails
-    public List<StudyDatabase> getActiveLibraryEntries() throws IllegalArgumentException {
-        return study.getDatabases()
+    public List<StudyCatalog> getActiveLibraryEntries() throws IllegalArgumentException {
+        return study.getCatalogs()
                     .parallelStream()
-                    .filter(StudyDatabase::isEnabled)
-                    .collect(Collectors.toList());
+                    .filter(StudyCatalog::isEnabled)
+                    .toList();
+    }
+
+    /// Returns the fetchers of all enabled catalogs, catalogs without a matching fetcher are not returned
+    private List<SearchBasedFetcher> getActiveFetchers() {
+        return new StudyCatalogToFetcherConverter(
+                getActiveLibraryEntries(),
+                preferences.getImportFormatPreferences(),
+                preferences.getImporterPreferences()).getActiveFetchers();
+    }
+
+    /// returns the effective result limit per catalog: its own override, else the study wide
+    /// default, else [#DEFAULT_RESULT_LIMIT], keys match catalog names case-insensitively
+    public Map<String, Integer> getResultLimitsPerCatalog() {
+        Map<String, Integer> limits = new TreeMap<>(String.CASE_INSENSITIVE_ORDER);
+        for (StudyCatalog catalog : study.getCatalogs()) {
+            Integer limit = catalog.getMaxResults() != null
+                            ? catalog.getMaxResults()
+                            : study.getMaxResultsPerCatalog();
+            limits.put(catalog.getName(), limit != null ? limit : DEFAULT_RESULT_LIMIT);
+        }
+        return limits;
     }
 
     public Study getStudy() {
@@ -258,14 +300,10 @@ public class StudyRepository {
     /// Create for each query a folder, and for each fetcher a bib file in the query folder to store its results.
     private void setUpRepositoryStructureForQueriesAndFetchers() throws IOException {
         // Cannot use stream here since IOException has to be thrown
-        StudyCatalogToFetcherConverter converter = new StudyCatalogToFetcherConverter(
-                this.getActiveLibraryEntries(),
-                preferences.getImportFormatPreferences(),
-                preferences.getImporterPreferences());
+        List<SearchBasedFetcher> activeFetchers = getActiveFetchers();
         for (String query : this.getSearchQueryStrings()) {
             createQueryResultFolder(query);
-            converter.getActiveFetchers()
-                     .forEach(searchBasedFetcher -> createFetcherResultFile(query, searchBasedFetcher));
+            activeFetchers.forEach(searchBasedFetcher -> createFetcherResultFile(query, searchBasedFetcher));
             createQueryResultFile(query);
         }
         createStudyResultFile();
@@ -350,26 +388,39 @@ public class StudyRepository {
     /// Persists the crawling results in the local file based repository.
     ///
     /// @param crawlResults The results that shall be persisted.
-    private void persistResults(List<QueryResult> crawlResults) throws IOException, SaveException {
+    private void persistResults(List<QueryResult> crawlResults) throws IOException, GitAPIException, SaveException {
         DatabaseMerger merger = new DatabaseMerger(preferences.getBibEntryPreferences().getKeywordSeparator());
         BibDatabase newStudyResultEntries = new BibDatabase();
+        Set<String> allFetcherNames = new LinkedHashSet<>();
 
         for (QueryResult result : crawlResults) {
             BibDatabase queryResultEntries = new BibDatabase();
+
             for (FetchResult fetcherResult : result.getResultsPerFetcher()) {
                 BibDatabase fetcherEntries = fetcherResult.getFetchResult();
-                BibDatabaseContext existingFetcherResult = getFetcherResultEntries(result.getQuery(), fetcherResult.getFetcherName());
+                String fetcherName = fetcherResult.getFetcherName();
+                BibDatabaseContext existingFetcherResult = getFetcherResultEntries(
+                        result.getQuery(), fetcherName);
+
+                allFetcherNames.add(fetcherName);
+
+                // Tag entries with their source fetcher BEFORE any merging
+                tagEntriesWithFetcherGroup(fetcherEntries.getEntries(), fetcherName);
+
+                // Add fetcher group to per-fetcher .bib metadata
+                addFetcherGroupToMetaData(existingFetcherResult, fetcherName);
 
                 // Merge new entries into fetcher result file
                 merger.merge(existingFetcherResult.getDatabase(), fetcherEntries);
 
                 // Create citation keys for all entries that do not have one
                 generateCiteKeys(existingFetcherResult, fetcherEntries);
-
                 // Aggregate each fetcher result into the query result
                 merger.merge(queryResultEntries, fetcherEntries);
 
-                writeResultToFile(getPathToFetcherResultFile(result.getQuery(), fetcherResult.getFetcherName()), existingFetcherResult);
+                writeResultToFile(
+                        getPathToFetcherResultFile(result.getQuery(), fetcherName),
+                        existingFetcherResult);
             }
             BibDatabaseContext existingQueryEntries = getQueryResultEntries(result.getQuery());
 
@@ -385,7 +436,53 @@ public class StudyRepository {
         // Merge new entries into study result file
         merger.merge(existingStudyResultEntries.getDatabase(), newStudyResultEntries);
 
+        // Add all fetcher groups to study result metadata
+        for (String fetcherName : allFetcherNames) {
+            addFetcherGroupToMetaData(existingStudyResultEntries, fetcherName);
+        }
         writeResultToFile(getPathToStudyResultFile(), existingStudyResultEntries);
+
+        writeStudyLockFile();
+    }
+
+    /// Writes the study lock file, it records the exact query sent to each catalog, so a crawl can be reproduced.
+    ///
+    /// The content depends only on the study definition, crawling the same unchanged study again produces identical content.
+    // [impl->req~slr.lock-file~1]
+    private void writeStudyLockFile() throws IOException {
+        new StudyYamlParser().writeStudyYamlFile(buildStudyLock(), repositoryPath.resolve(STUDY_LOCK_FILE_NAME));
+    }
+
+    /// Builds the lock representation of the study.
+    ///
+    /// For each query, the catalog-specific map lists every catalog that is queried with its effective query:
+    /// the catalog-specific override if one is defined for it, otherwise the query string itself.
+    /// Disabled catalogs and catalogs without a matching fetcher are not listed, as no query is sent to them.
+    private Study buildStudyLock() {
+        List<String> catalogNames = getActiveFetchers().stream()
+                                                       .map(SearchBasedFetcher::getName)
+                                                       .toList();
+        List<StudyQuery> lockQueries = study.getQueries().stream()
+                                            .map(query -> toLockQuery(query, catalogNames))
+                                            .toList();
+        Study lock = new Study(study.getAuthors(), study.getTitle(), study.getResearchQuestions(), lockQueries, study.getCatalogs());
+        lock.setMaxResultsPerCatalog(study.getMaxResultsPerCatalog());
+        return lock;
+    }
+
+    private StudyQuery toLockQuery(StudyQuery query, List<String> catalogNames) {
+        Map<String, String> overrides = new TreeMap<>(String.CASE_INSENSITIVE_ORDER);
+        query.getCatalogSpecific().forEach(overrides::putIfAbsent);
+
+        Map<String, String> effectiveQueries = new LinkedHashMap<>();
+        for (String catalogName : catalogNames) {
+            String override = overrides.get(catalogName);
+            effectiveQueries.put(catalogName, StringUtil.isBlank(override) ? query.getQuery() : override);
+        }
+
+        StudyQuery lockQuery = new StudyQuery(query.getQuery());
+        lockQuery.setCatalogSpecific(effectiveQueries);
+        return lockQuery;
     }
 
     private void generateCiteKeys(BibDatabaseContext existingEntries, BibDatabase targetEntries) {
@@ -411,6 +508,41 @@ public class StudyRepository {
             throw new SaveException(Localization.lang("Character encoding UTF-8 is not supported.", ex));
         } catch (IOException ex) {
             throw new SaveException("Problems saving", ex);
+        }
+    }
+
+    /// Tags each entry's groups field with the fetcher name, preserving any existing groups.
+    private void tagEntriesWithFetcherGroup(Collection<BibEntry> entries, String fetcherName) {
+        char separator = preferences.getBibEntryPreferences().getKeywordSeparator();
+        entries.forEach(entry -> {
+            String existing = entry.getField(StandardField.GROUPS).orElse("");
+            String merged = KeywordList.merge(existing, fetcherName, separator).getAsString(separator);
+            entry.setField(StandardField.GROUPS, merged);
+        });
+    }
+
+    /// Adds a fetcher group node to the database context metadata.
+    /// If the group already exists, does nothing.
+    private void addFetcherGroupToMetaData(BibDatabaseContext context, String fetcherName) {
+        GroupTreeNode rootNode = context.getMetaData()
+                                        .getGroups()
+                                        .orElseGet(() -> {
+                                            GroupTreeNode newRoot = GroupTreeNode.fromGroup(
+                                                    GroupsFactory.createAllEntriesGroup());
+                                            context.getMetaData().setGroups(newRoot);
+                                            return newRoot;
+                                        });
+
+        boolean groupExists = rootNode.getChildren().stream()
+                                      .anyMatch(child -> child.getGroup() instanceof ExplicitGroup
+                                              && child.getGroup().getName().equals(fetcherName));
+
+        if (!groupExists) {
+            ExplicitGroup fetcherGroup = new ExplicitGroup(
+                    fetcherName,
+                    GroupHierarchyType.INDEPENDENT,
+                    preferences.getBibEntryPreferences().getKeywordSeparator());
+            rootNode.addSubgroup(fetcherGroup);
         }
     }
 
