@@ -249,7 +249,7 @@ public class IsiImporter extends Importer {
                         int detpos = value.indexOf(' ');
 
                         // tweak for IEEE Explore
-                        if ((detpos != -1) && !value.substring(0, detpos).trim().isEmpty()) {
+                        if ((detpos != -1) && !value.substring(0, detpos).isBlank()) {
                             value = value.substring(0, detpos);
                         }
                         pages.append("--").append(value);
@@ -309,7 +309,7 @@ public class IsiImporter extends Importer {
             List<Field> toRemove = new ArrayList<>();
             for (Map.Entry<Field, String> field : hm.entrySet()) {
                 String content = field.getValue();
-                if ((content == null) || content.trim().isEmpty()) {
+                if ((content == null) || content.isBlank()) {
                     toRemove.add(field.getKey());
                 }
             }
